thymeleaf demo with different thymeleaf component

--- a/06-spring-boot-spring-mvc/01-thymeleafdemo-helloworld/src/main/resources/templates/student-confirmation.html
+++ b/06-spring-boot-spring-mvc/01-thymeleafdemo-helloworld/src/main/resources/templates/student-confirmation.html
@@ -9,5 +9,12 @@
 
 The student is confirmed:
 <span th:text="${student.firstName} +' '+${student.lastName}+' comes from '+${student.country}+'.'" />
+<br><br>
+Favorate Programming Language: <span th:text="${student.favorateLanguage}" />
+<br><br>
+Favorate OS:
+<ul>
+<li  th:each="s: ${student.os}" th:text="${s}"/>
+</ul>
 </body>
 </html>
