--- a/06-spring-boot-spring-mvc/01-thymeleafdemo-helloworld/src/main/resources/templates/student-form.html
+++ b/06-spring-boot-spring-mvc/01-thymeleafdemo-helloworld/src/main/resources/templates/student-form.html
@@ -21,6 +21,19 @@
     <option th:each="tempCountry : ${countries}" th:value="${tempCountry}" th:text="${tempCountry}" />
 </select>
     <br><br>
+
+    Favorate Programming Language:
+<!--    <input type="radio" th:field="*{favorateLanguage}" th:value="Go" >Go</input>-->
+<!--    <input type="radio" th:field="*{favorateLanguage}" th:value="Java" >Java</input>-->
+<!--    <input type="radio" th:field="*{favorateLanguage}" th:value="Python" >Python</input>-->
+<!--    <input type="radio" th:field="*{favorateLanguage}" th:value="C" >C++</input>-->
+    <input type="radio" th:field="*{favorateLanguage}"
+           th:each="lan : ${favLan}" th:value="${lan}" th:text="${lan}"/>
+    <br><br>
+    Favorate OS:
+    <input type="checkbox" th:field="*{os}"
+           th:each="system : ${systems}" th:value="${system}" th:text="${system}"/>
+    <br><br>
     <input type="submit" value="Submit" />
 </form>
 </body>
