Spring mvc security

--- a/08-spring-boot-spring-mvc-security/01-spring-boot-spring-mvc-security-default/src/main/resources/templates/home.html
+++ b/08-spring-boot-spring-mvc-security/01-spring-boot-spring-mvc-security-default/src/main/resources/templates/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>Uyghur Home Page</title>
@@ -8,6 +9,35 @@
 
 <h2>Uyghur Home Page</h2>
 <hr>
+<p>
 Welcome to the Uyghur company home page!
+</p>
+<hr>
+
+<p>
+    User: <span sec:authentication="principal.username" ></span>
+    <br><br>
+    Role(s): <span sec:authentication="principal.authorities" ></span>
+</p>
+
+
+    <div sec:authorize="hasRole('MANAGER')">
+        <p>
+    <a th:href="@{/leaders}" >Leadership Meeting</a>
+    (Only for Manager peeps)
+    </p>
+</div>
+
+<div sec:authorize="hasRole('ADMIN')">
+<p>
+    <a th:href="@{/systems}" >IT Systems Meeting</a>
+    (Only for Admin peeps)
+</p>
+</div>
+
+
+<form action="#" method="post" th:action="@{/logout}">
+    <input type="submit" value="Logout" />
+</form>
 </body>
 </html>
